# hello-OCaml

./: .gitignore  README.md
hello/: dune-project  hello.opam
hello/lib/: en.ml  es.ml  greeter.ml  greeting_sig.ml
html_gen/: .gitignore  dune-project
html_gen/lib/: dune  gen_page.ml  generate_body.ml
html_gen/lib/file_interactors/: copy_file.ml  copy_styles.ml  dune  file_saver.ml  list_directories.ml  list_images.ml  save_file.ml
html_gen/lib/generators/: dune  gen_declaration.ml  gen_html_sig.ml  gen_page.ml  generate_body.ml  generate_image_links.ml  generate_photo_gallery.ml  generate_photo_gallery.mli
html_gen/styles/: default-style.css  gallery-style.css
html_gen/test/: dune
