(lang dune 3.15)

(name hello)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "seprov")

(maintainers "seprov")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name hello)
 (synopsis "From the ocaml.org tutorial")
 (description "This project is just from the ocaml.org hello world tutorial")
 (depends ocaml dune)
 (tags
  ("hello world" project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
